Two columns recycler view, Detail activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">MainActivity</string>
+    <string name="app_name">Viewy</string>
+    <string name="detail_image">Detail Image</string>
 </resources>
